--- a/streamflix/index.html
+++ b/streamflix/index.html
@@ -67,7 +67,9 @@
                 aria-expanded="false"
                 aria-label="Lire Inception"
               >
-                <span class="play-icon">⏯️</span>
+                <span class="play-icon">
+                  <img src="./assets/icons/play-button-svgrepo-com.svg" alt="Play Icon" />
+                </span>
                 Lecture
               </button>
               <button
@@ -77,7 +79,9 @@
                 aria-expanded="false"
                 aria-label="Plus d'infos sur Inception"
               >
-                <span class="info-icon">ℹ️</span>
+                <span class="info-icon">
+                  <img src="./assets/icons/Info.svg" alt="Info Icon" />
+                </span>
                 Plus d'infos
               </button>
             </div>
@@ -99,13 +103,17 @@
               src="./assets/films/darknight.webp"
               alt="The Dark Knight Movie Poster"
             />
-            <h3>The Dark Knight</h3>
-            <ul arial-label="film-details">
-              <li aria-label="released-year">Année : 2008</li>
-              <li aria-label="film-duration">Durée : 2h32</li>
-              <li aria-label="film-rating">4.8/5</li>
-              <li aria-label="film-genres">Action, Crime, Drama</li>
-            </ul>
+            <div class="show-on-hover">
+              <div class="hover-text">
+                <h3>The Dark Knight</h3>
+                <ul arial-label="film-details">
+                  <li aria-label="released-year">Année : 2008</li>
+                  <li aria-label="film-duration">Durée : 2h32</li>
+                  <li aria-label="film-rating">4.8/5</li>
+                  <li aria-label="film-genres">Action, Crime, Drama</li>
+                </ul>
+              </div>
+            </div>
           </article>
           <article
             class="trending-film-card"
@@ -118,13 +126,17 @@
               src="./assets/films/Interstellar_film_poster.jpg"
               alt="Interstellar Movie Poster"
             />
-            <h3>Interstellar</h3>
-            <ul arial-label="film-details">
-              <li aria-label="released-year">Année : 2014</li>
-              <li aria-label="film-duration">Durée : 2h49</li>
-              <li aria-label="film-rating">4.7/5</li>
-              <li aria-label="film-genres">Sci-Fi, Drama</li>
-            </ul>
+            <div class="show-on-hover">
+              <div class="hover-text">
+                <h3>Interstellar</h3>
+                <ul arial-label="film-details">
+                  <li aria-label="released-year">Année : 2014</li>
+                  <li aria-label="film-duration">Durée : 2h49</li>
+                  <li aria-label="film-rating">4.7/5</li>
+                  <li aria-label="film-genres">Sci-Fi, Drama</li>
+                </ul>
+              </div>
+            </div>
           </article>
           <article
             class="trending-film-card"
@@ -136,13 +148,17 @@
               src="./assets/films/pulp_fiction.jpg"
               alt="Pulp Fiction Movie Poster"
             />
-            <h3>Pulp Fiction</h3>
-            <ul arial-label="film-details">
-              <li aria-label="released-year">Année : 1994</li>
-              <li aria-label="film-duration">Durée : 2h34</li>
-              <li aria-label="film-rating">4.6/5</li>
-              <li aria-label="film-genres">Action, Crime, Drama</li>
-            </ul>
+            <div class="show-on-hover">
+              <div class="hover-text">
+                <h3>Pulp Fiction</h3>
+                <ul arial-label="film-details">
+                  <li aria-label="released-year">Année : 1994</li>
+                  <li aria-label="film-duration">Durée : 2h34</li>
+                  <li aria-label="film-rating">4.6/5</li>
+                  <li aria-label="film-genres">Action, Crime, Drama</li>
+                </ul>
+              </div>
+            </div>
           </article>
         </div>
       </section>
@@ -150,6 +166,7 @@
         <h4>Recommandé pour vous</h4>
         <div class="films-wrapper">
           <article
+            class="recommended-film-card"
             aria-label="film-card"
             role="card"
             aria-label="Inception"
@@ -159,15 +176,20 @@
               src="./assets/films/inception.webp"
               alt="Inception Movie Poster"
             />
-            <h3>Inception</h3>
-            <ul arial-label="film-details">
-              <li aria-label="released-year">Année : 2010</li>
-              <li aria-label="film-duration">Durée : 2h28</li>
-              <li aria-label="film-rating">4.5/5</li>
-              <li aria-label="film-genres">Sci-Fi, Thriller</li>
-            </ul>
+            <div class="show-on-hover">
+              <div class="hover-text">
+                <h3>Inception</h3>
+                <ul arial-label="film-details">
+                  <li aria-label="released-year">Année : 2010</li>
+                  <li aria-label="film-duration">Durée : 2h28</li>
+                  <li aria-label="film-rating">4.5/5</li>
+                  <li aria-label="film-genres">Sci-Fi, Thriller</li>
+                </ul>
+              </div>
+            </div>
           </article>
           <article
+            class="recommended-film-card"
             aria-label="film-card"
             role="card"
             aria-label="The Matrix"
@@ -177,15 +199,20 @@
               src="./assets/films/matrix.jpeg"
               alt="The Matrix Movie Poster"
             />
-            <h3>The Matrix</h3>
-            <ul arial-label="film-details">
-              <li aria-label="released-year">Année : 1999</li>
-              <li aria-label="film-duration">Durée : 2h16</li>
-              <li aria-label="film-rating">4.5/5</li>
-              <li aria-label="film-genres">Action, Sci-Fi</li>
-            </ul>
+            <div class="show-on-hover">
+              <div class="hover-text">
+                <h3>The Matrix</h3>
+                <ul arial-label="film-details">
+                  <li aria-label="released-year">Année : 1999</li>
+                  <li aria-label="film-duration">Durée : 2h16</li>
+                  <li aria-label="film-rating">4.5/5</li>
+                  <li aria-label="film-genres">Action, Sci-Fi</li>
+                </ul>
+              </div>
+            </div>
           </article>
           <article
+          class="recommended-film-card"
             aria-label="film-card"
             role="card"
             aria-label="Forrest Gump"
@@ -195,6 +222,8 @@
               src="./assets/films/forrest_gump.jpg"
               alt="Forrest Gump Movie Poster"
             />
+            <div class="show-on-hover">
+              <div class="hover-text">
             <h3>Forrest Gump</h3>
             <ul arial-label="film-details">
               <li aria-label="released-year">Année : 1994</li>
@@ -202,6 +231,8 @@
               <li aria-label="film-rating">4.4/5</li>
               <li aria-label="film-genres">Drama, Romance</li>
             </ul>
+            </div>
+            </div>
           </article>
         </div>
       </section>
